// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderComponent should match snapshot when user logged in and loading 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "toggleFromArrayInKey": [Function],
      "toggleFromSubArray": [Function],
    }
  }
  loading={1}
  mapToProps={[Function]}
  setStoreState={[MockFunction]}
  user={
    Object {
      "email": "test@test.com",
      "isGuest": false,
    }
  }
>
  <Component />
</Connect>
`;

exports[`HeaderComponent should match snapshot when user not logged in and not loading 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
      "toggleFromArrayInKey": [Function],
      "toggleFromSubArray": [Function],
    }
  }
  loading={0}
  mapToProps={[Function]}
  setStoreState={[MockFunction]}
  user={
    Object {
      "email": "",
      "isGuest": false,
    }
  }
>
  <Component />
</Connect>
`;
